--- a/main.html
+++ b/main.html
@@ -11,6 +11,25 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+
+ <thead>
+      <tr>
+        <th>Roll number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Rahul Kumar</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Priya Sharma</td>
+      </tr>
+    </tbody>
+
+	
 </body>
 
 </html>
