--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-
+<table>
  <thead>
       <tr>
         <th>Roll number</th>
@@ -28,7 +28,7 @@
         <td>Priya Sharma</td>
       </tr>
     </tbody>
-
+</table>
 	
 </body>
 
